--- a/package.json
+++ b/package.json
@@ -17,18 +17,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
     "native-base": "3.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^5.8.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.11",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
